k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-bank-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: spring-bank-app

  template:
    metadata:
      labels:
        app: spring-bank-app

    spec:
      containers:
        - name: spring-bank-app
          image: sanad/spring-bank-app:1.16

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-bank-service

spec:
  selector:
    app: spring-bank-app

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
