k8s/artemis.yaml
apiVersion: v1
kind: Service
metadata:
  name: artemis
spec:
  selector:
    app: artemis

  ports:
    - name: jms
      port: 61616
      targetPort: 61616

    - name: console
      port: 8161
      targetPort: 8161

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: artemis
  template:
    metadata:
      labels:
        app: artemis

    spec:
      containers:
        - name: artemis
          image: apache/activemq-artemis:2.44.0

          ports:
            - containerPort: 61616
            - containerPort: 8161
