k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
    serviceName: postgres
    replicas: 1

    selector:
      matchLabels:
        app: postgres

    template:
      metadata:
        labels:
          app: postgres

      spec:
        containers:
          - name: postgres
            image: postgres:16

            ports:
              - containerPort: 5432

            volumeMounts:
              - name: postgres-data
                mountPath: /var/lib/postgresql/data

    volumeClaimTemplates:
      - metadata:
          name: postgres-data
        spec:
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
