k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-bank-ingress

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bank.local
    - secretName: spring-bank-tls

  rules:
    - host: bank.local

      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-bank-service
                port:
                  number: 8080
